Fixed Sidebar alignment

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1808,7 +1808,7 @@ p.account_sub_tite {
 
 .sidebar {
   padding: 10px 20px;
-  margin: 50px 0px;
+  margin: 35px 0px;
 }
 
 .sidebar ul {
